Add controller handling for settings updating
